--- a/1_preprocessing/preprocessing.ipynb
+++ b/1_preprocessing/preprocessing.ipynb
@@ -119,7 +119,7 @@
     "for i in range(len(frames)):\n",
     "    img_path = os.path.join('frames',frames[i])\n",
     "    img = cv2.imread(img_path)\n",
-    "    axs[i].imshow(img.astype(np.uint8))"
+    "    axs[i].imshow(cv2.cvtColor(img.astype(np.uint8), cv2.COLOR_BGR2RGB))"
    ]
   },
   {
