--- a/1_preprocessing/preprocessing_sol.ipynb
+++ b/1_preprocessing/preprocessing_sol.ipynb
@@ -119,7 +119,7 @@
     "for i in range(len(frames)):\n",
     "    img_path = os.path.join('frames',frames[i])\n",
     "    img = cv2.imread(img_path)\n",
-    "    axs[i].imshow(img.astype(np.uint8))"
+    "    axs[i].imshow(cv2.cvtColor(img.astype(np.uint8), cv2.COLOR_BGR2RGB))"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "outputs": [],
    "source": [
     "frame_o = cv2.imread('frames/frame_o_02.jpg')\n",
-    "plt.imshow(frame_o)"
+    "plt.imshow(cv2.cvtColor(frame_o, cv2.COLOR_BGR2RGB))"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "outputs": [],
    "source": [
     "frame = cv2.imread('frames/frame_02.jpg')\n",
-    "plt.imshow(frame)"
+    "plt.imshow(cv2.cvtColor(frame, cv2.COLOR_BGR2RGB))"
    ]
   },
   {
