update module name

--- a/2_C3D_nonlocal/train.ipynb
+++ b/2_C3D_nonlocal/train.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "from C3D import C3D\n",
     "import time\n",
-    "import data_processing_sol as data_processing\n",
+    "import data_processing\n",
     "import os\n",
     "import os.path\n",
     "from os.path import join\n",
